data/derived/fa15/progs/unify/prog1267.ml.out
Characters 14-17:
  let _ = lift2 (+) (Some 1) (Some 10);;
                ^^^
Error: This expression has type int -> int -> int
       but an expression was expected of type 'a option -> 'b option -> 'c
       Type int is not compatible with type 'a option 
